--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "express": "^4.17.1",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
-    "mkdirp": "^1.0.4"
+    "mkdirp": "^1.0.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
