--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
+    "cf-publish": "wrangler publish",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@cloudflare/wrangler": "^1.15.1"
   }
 }
