--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
     "mkdirp": "^1.0.4",
+    "sha3": "^2.1.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
